@@ -12,6 +12,7 @@ Nagios 3.x Change Log
 * Fixed bug with init script option to check Nagios config 
 * Auto-filled comment/author fields for acknowledging problems through WAP interface
 * Fixed bug with processing of CONTACTGROUPNAMES, NOTES, NOTESURL, and ACTIONURL macros
+* Doc fix regarding soft state dependencies
 
 
 
